--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test": "yarn workspace oa-cypress start",
     "test:components": "yarn workspace oa-components test",
     "test:unit": "env-cmd -e cra craco test --env=jsdom",
-    "test:unit:ci": "env-cmd -e cra craco test --env=jsdom --runInBand --logHeapUsage",
+    "test:unit:ci": "env-cmd -e cra craco test --env=jsdom --runInBand --logHeapUsage --coverage",
     "storybook": "yarn workspace oa-components start",
     "docs": "yarn workspace oa-docs start",
     "analyze": "npx cra-bundle-analyzer && npx open-cli build/report.html",
